Mutation observer failures

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,8 @@
             "matches": ["<all_urls>"],
             "js": ["youtube-chap.js"]
           }
+  ],
+  "permissions": [
+          "tabs"
   ]
 }
